--- a/src/main/webapp/static/auth/style.css
+++ b/src/main/webapp/static/auth/style.css
@@ -278,6 +278,13 @@ form.sign-in-form {
     pointer-events: all;
 }
 
+.container-action {
+    width: 380px;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+
 @media (max-width: 870px) {
     .container {
         min-height: 800px;
